include/dss_capi.h

    DSS_CAPI_DLL void Sensors_Set_kWS(double* ValuePtr, int32_t ValueCount);
    DSS_CAPI_DLL void Sensors_Set_MeteredElement(char* Value);
    DSS_CAPI_DLL void Sensors_Set_MeteredTerminal(int32_t Value);
    /*
    Set the active Sensor by name.
    */
    DSS_CAPI_DLL void Sensors_Set_Name(char* Value);
    DSS_CAPI_DLL void Sensors_Set_PctError(double Value);
    DSS_CAPI_DLL void Sensors_Set_ReverseDelta(uint16_t Value);
    DSS_CAPI_DLL void Sensors_Set_Weight(double Value);
    /*
    Voltage base for the sensor measurements. LL for 2 and 3-phase sensors, LN for 1-phase sensors.
    */
    DSS_CAPI_DLL double Sensors_Get_kVbase(void);
    DSS_CAPI_DLL void Sensors_Set_kVbase(double Value);
    DSS_CAPI_DLL int32_t Sensors_Get_idx(void);
    DSS_CAPI_DLL void Sensors_Set_idx(int32_t Value);