src/CAPI/CAPI_Sensors.pas


    if ValueCount <> elem.NPhases then
    begin
        DoSimpleMsg('The provided number of values does not match the element''s number of phases.', 5024);
        Exit;
    end;
    Move(ValuePtr^, elem.SensorVoltage[1], elem.NPhases * SizeOf(Double));
end;
//------------------------------------------------------------------------------
procedure Sensors_Set_kWS(ValuePtr: PDouble; ValueCount: TAPISize); CDECL;
var
    elem: TSensorObj;
begin
    if not _activeObj(elem) then
        Exit;

    if ValueCount <> elem.NPhases then
    begin
        DoSimpleMsg('The provided number of values does not match the element''s number of phases.', 5024);
        Exit;
    end;
    Move(ValuePtr^, elem.SensorP[1], elem.NPhases * SizeOf(Double));
end;
//------------------------------------------------------------------------------
procedure Sensors_Set_MeteredElement(const Value: PAnsiChar); CDECL;
begin
    Set_Parameter('element', Value);
end;
//------------------------------------------------------------------------------
procedure Sensors_Set_MeteredTerminal(Value: Integer); CDECL;
begin
    Set_Parameter('terminal', IntToStr(Value));
end;
//------------------------------------------------------------------------------
procedure Sensors_Set_Name(const Value: PAnsiChar); CDECL;
begin
    if InvalidCircuit then
        Exit;
    if SensorClass.SetActive(Value) then
    begin
        ActiveCircuit.ActiveCktElement := SensorClass.ElementList.Active;
        ActiveCircuit.Sensors.Get(SensorClass.Active);
    end
    else
    begin
        DoSimpleMsg('Sensor "' + Value + '" Not Found in Active Circuit.', 5003);
    end;
end;
//------------------------------------------------------------------------------
procedure Sensors_Set_PctError(Value: Double); CDECL;
begin
    Set_Parameter('%error', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
procedure Sensors_Set_ReverseDelta(Value: TAPIBoolean); CDECL;
begin
    if Value = TRUE then
        Set_Parameter('DeltaDirection', '-1')
    else
        Set_Parameter('DeltaDirection', '1');
end;
//------------------------------------------------------------------------------
procedure Sensors_Set_Weight(Value: Double); CDECL;
begin
    Set_Parameter('weight', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
function Sensors_Get_kVbase(): Double; CDECL;
var
    elem: TSensorObj;
begin
    Result := 0.0;
    if not _activeObj(elem) then
        Exit;
    Result := elem.BaseKV;
end;
//------------------------------------------------------------------------------
procedure Sensors_Set_kVbase(Value: Double); CDECL;
begin
    Set_Parameter('kvbase', FloatToStr(Value));
end;
//------------------------------------------------------------------------------
function Sensors_Get_idx(): Integer; CDECL;
begin
    Result := 0;
    if InvalidCircuit then
        Exit;
    Result := ActiveCircuit.Sensors.ActiveIndex
end;
//------------------------------------------------------------------------------
procedure Sensors_Set_idx(Value: Integer); CDECL;
var
    pSensor: TSensorObj;
begin
    if InvalidCircuit then
        Exit;
    pSensor := ActiveCircuit.Sensors.Get(Value);
    if pSensor = NIL then
    begin
        DoSimpleMsg('Invalid Sensor index: "' + IntToStr(Value) + '".', 656565);
        Exit;
    end;
    ActiveCircuit.ActiveCktElement := pSensor;
end;
//------------------------------------------------------------------------------
end.
